# nebo

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  NEW.md  PLAN.md  README.md  main.py  pyproject.toml
.github/workflows/: build-demos.yml  ci.yml  deploy-docs.yml  release.yml
docs/: cli.rst  conf.py  contributing.rst  guide.rst  index.rst  installing.rst  reference.rst  robots.txt
docs/_templates/: layout.html
docs/demos/guide/: 10_dag_strategy_stack.py  11_depends_on.py  12_class_grouping.py  13_workflow_md.py  14_ui_hints.py  15_complete_pipeline.py  1_text_logs.py  2_log_line.py  3_log_scatter.py  4_snapshot_metrics.py  5_images.py  6_audio.py  7_log_cfg.py  8_global_scope.py  9_fn_pipeline.py
docs/demos/index/: 1_hello_world.py  2_multi_modal.py  2_pipeline.py  3_pipeline.py
docs/scripts/: build_docs_demos.py
docs/superpowers/plans/: 2026-04-06-nebo-implementation.md
docs/superpowers/specs/: 2026-04-06-nebo-design.md
examples/: 3stage_image.py  basic_pipeline.py  beta_image_pipeline.py  beta_training_loop.py  class_pipeline.py  config_pipeline.py  global_logging.py  graph_stats.py  image_labels.py  image_pipeline.py  interactive_pipeline.py  metrics_gallery.py  multi_run.py  training_loop.py
nebo/: README.md  __init__.py  alerts.py  cli.py  cli_deploy.py  client.py  labels.py  notebook.py  wandb.py
nebo/core/: __init__.py  client.py  coalesce.py  config.py  dag.py  decorators.py  fileformat.py  groups.py  state.py  tracker.py  transport.py  uri.py
nebo/extensions/: __init__.py  mlflow.py  tensorboard.py
nebo/extras/: __init__.py
nebo/extras/cv/: __init__.py  augment.py  resize.py  transforms.py
nebo/logging/: __init__.py  logger.py  serializers.py
nebo/mcp/: __init__.py  server.py  stdio.py  tools.py
nebo/server/: __init__.py  cache.py  chat.py  daemon.py  protocol.py  runner.py  tree.py  watcher.py
nebo/server/spaces/: Dockerfile.tmpl  README.md.tmpl
nebo/server/static/: index.html
nebo/skills/: __init__.py  install.py
nebo/skills/instrumentation/: SKILL.md
nebo/skills/runs-qa/: SKILL.md
nebo/terminal/: __init__.py  display.py
tests/: conftest.py  test_alert_rules.py  test_alerts.py  test_cache.py  test_chat.py  test_class_decoration.py  test_cli.py  test_cli_deploy.py  test_client.py  test_coalesce.py  test_daemon.py  test_daemon_modes.py  test_declarative_metadata.py  test_decorators.py  test_fileformat.py  test_flush_public.py  test_http_client.py  test_logging.py  test_mcp_tools.py  test_namespace.py  test_notebook.py  test_protocol.py  test_queue.py  test_run_completion.py  test_run_id_banner.py  test_serializers.py  test_server.py  test_skill_install.py  test_start_run.py  test_state.py  test_storage.py  test_storage_fixes.py  test_tracker.py  test_transport.py  test_tree.py  test_ui_config.py  test_uri.py  test_wandb_shim.py  test_watcher.py  test_watcher_shallow.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/ui/: input.tsx  (+4 more)
ui/src/hooks/: useAxisTransform.ts  useEmbeddedView.ts  useLoggableHasContent.ts  useMedia.ts  useRunData.ts  useRunDuration.ts  useStreams.ts  useTimelineBounds.ts  useTimelineFilter.ts  useWebSocket.ts
ui/src/lib/: api.ts  auth.ts  colors.ts  export.ts  runTree.ts  streams.ts  ws.ts
ui/src/store/: index.ts
ui/src/styles/: globals.css
(+119 files in other folders)
